Undo use of interning factory